basic pages setup are working

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,46 @@
   justify-content: center;
 }
 
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .Information {
   display: flex;
   flex-direction: column;
@@ -12,7 +52,7 @@
   align-items: center;
 }
 
-.Information input{
+.Information input {
   width: 300px;
   height: 20px;
   font-size: 20px;
@@ -20,13 +60,13 @@
   margin: 5px;
 }
 
-.Information button{
+.Information button {
   width: 300px;
   height: 50px;
   margin-top: 15px;
-  
+
 }
 
-.Information button:hover{
+.Information button:hover {
   cursor: pointer;
 }
