--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -31,7 +31,6 @@
                     border: none;
                     border-bottom: 1px solid gray;
                 }
-
                 button {
                     padding: 10px;
                     border: none;
@@ -39,6 +38,14 @@
                     width: 95%;
                     cursor: pointer;
                     color: black;
+                }
+                p{
+                    font-size: 12px;
+                    color: red;
+                }
+                span{
+                    font-size: 12px;
+                    text-align: center;
                 }
             }
         }
