--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,6 +1,15 @@
 .App {
+    display: flex;
+    justify-content: center;
 
     .container {
+
+        width: 80%;
+
+        .link {
+            text-decoration: none;
+            color: inherit;
+        }
 
         //login and registration
         .auth {
@@ -31,6 +40,7 @@
                     border: none;
                     border-bottom: 1px solid gray;
                 }
+
                 button {
                     padding: 10px;
                     border: none;
@@ -39,15 +49,63 @@
                     cursor: pointer;
                     color: black;
                 }
-                p{
+
+                p {
                     font-size: 12px;
                     color: red;
                 }
-                span{
+
+                span {
                     font-size: 12px;
                     text-align: center;
                 }
             }
+        }
+
+        .navbar {
+            .container {
+                padding: 10px 0px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                .logo {
+                    img {
+                        width: 120px;
+                    }
+                }
+
+                .links {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+
+                    h6 {
+                        font-size: 16px;
+                        font-weight: 300;
+                    }
+
+                    span {
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+
+        footer {
+            margin-top: 100px;
+            padding: 20px;
+            background-color: slateblue;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 12px;
+
+            img {
+                height: 50px;
+            }
+
+            span {}
         }
     }
 }
