--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,10 +1,13 @@
 .App {
     display: flex;
     justify-content: center;
+    background-color: black;
+    position: absolute;
 
     .container {
-
-        width: 80%;
+        position: relative;
+        width: 95%;
+        //background-color: black;
 
         .link {
             text-decoration: none;
@@ -68,10 +71,11 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                background-color: black;
 
                 .logo {
                     img {
-                        width: 120px;
+                        width: 200px;
                     }
                 }
 
@@ -79,6 +83,7 @@
                     display: flex;
                     align-items: center;
                     gap: 10px;
+                    color: white;
 
                     h6 {
                         font-size: 16px;
@@ -95,14 +100,14 @@
         footer {
             margin-top: 100px;
             padding: 20px;
-            background-color: slateblue;
+            background-color: black;
             display: flex;
             align-items: center;
             justify-content: space-between;
             font-size: 12px;
 
             img {
-                height: 50px;
+                height: 100px;
             }
 
             span {}
