--- a/client/src/pages/Inventory.scss
+++ b/client/src/pages/Inventory.scss
@@ -50,7 +50,7 @@
             margin-top: 30px;
             margin-left: 10px;
 
-
+            .titleYear{
             img {
                 position: relative;
                 z-index: 0;
@@ -87,28 +87,29 @@
                     line-height: 1%;
                     font-size: 12px;
                 }
-
+            }
+            .priceCart{
                 h3 {
                     position: absolute;
-                    top: 60px;
-                    left: 0;
-                    right: 0;
+                    top: 367px;
+                    left: 20px;
                     line-height: 100%;
                     font-size: 30px;
                     color: rgba(246, 208, 59, 255);
                 }
 
                 .cart {
-                    position: relative;
+                    position: absolute;
                     z-index: 2;
                     object-fit: cover;
+                    bottom: 10px;
+                    right: 10px;
 
-                    //top: 10px;
-                    //left: 120px;
                     img {
-                        max-width: 100px;
+                        max-width: 60px;
                         height: auto;
                     }
+                }
                 }
             }
         }
