--- a/client/src/pages/Inventory.scss
+++ b/client/src/pages/Inventory.scss
@@ -50,66 +50,71 @@
             margin-top: 30px;
             margin-left: 10px;
 
-            .titleYear{
-            img {
-                position: relative;
-                z-index: 0;
-                object-fit: cover;
-                padding: 10px;
-                overflow-clip-margin: content-box;
-                box-sizing: border-box;
-                max-width: auto;
-                height: 300px;
-                object-fit: cover;
-            }
-
-            .info {
-                //border: 1px solid white;
-                justify-content: center;
-                height: 150px;
-                max-width: auto;
-                margin-top: auto;
-                color: white;
-                position: relative;
-                bottom: 10px;
-
-
-                h2 {
-                    text-align: center;
-                    justify-content: center;
-                    overflow-wrap: break-word;
-                    line-height: 95%;
+            .titleYear {
+                img {
+                    position: relative;
+                    z-index: 0;
+                    object-fit: cover;
+                    padding: 10px;
+                    overflow-clip-margin: content-box;
+                    box-sizing: border-box;
+                    max-width: auto;
+                    height: 300px;
+                    object-fit: cover;
                 }
 
-                p {
+                .info {
+                    //border: 1px solid white;
+                    justify-content: center;
+                    height: 150px;
+                    max-width: auto;
+                    margin-top: auto;
+                    color: white;
                     position: relative;
                     bottom: 10px;
-                    line-height: 1%;
-                    font-size: 12px;
-                }
-            }
-            .priceCart{
-                h3 {
-                    position: absolute;
-                    top: 367px;
-                    left: 20px;
-                    line-height: 100%;
-                    font-size: 30px;
-                    color: rgba(246, 208, 59, 255);
-                }
 
-                .cart {
-                    position: absolute;
-                    z-index: 2;
-                    object-fit: cover;
-                    bottom: 10px;
-                    right: 10px;
 
-                    img {
-                        max-width: 60px;
-                        height: auto;
+                    h2 {
+                        text-align: center;
+                        justify-content: center;
+                        overflow-wrap: break-word;
+                        line-height: 95%;
+                    }
+
+                    p {
+                        position: relative;
+                        bottom: 10px;
+                        line-height: 1%;
+                        font-size: 12px;
                     }
                 }
+
+                .priceCart {
+                    h3 {
+                        position: absolute;
+                        top: 367px;
+                        left: 20px;
+                        line-height: 100%;
+                        font-size: 30px;
+                        color: rgba(246, 208, 59, 255);
+                    }
+
+                    .cart {
+                        position: absolute;
+                        z-index: 2;
+                        object-fit: cover;
+                        bottom: -250px;
+                        right: 0px;
+                        background-color: transparent;
+                        border: none;
+                        cursor: pointer;
+                        border-radius: 100%;
+
+                        img {
+                            max-width: 60px;
+                            height: auto;
+                        }
+                    }
                 }
             }
         }
