--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -84,13 +84,35 @@
                     gap: 10px;
                     color: white;
 
-                    h6 {
-                        font-size: 16px;
+                    .user {
+                        position: relative;
+                        left: 20px;
+                        font-size: 20px;
                         font-weight: 300;
                     }
 
-                    span {
-                        cursor: pointer;
+                    .cartIcon {
+                        img {
+                            position: relative;
+                            left: 50px;
+                            width: 40px;
+                            height: auto;
+                            cursor: pointer;
+                        }
+
+                        span {
+                            font-size: 20px;
+                            width: 25px;
+                            height: 25px;
+                            border-radius: 50%;
+                            background-color: rgba(246, 208, 59, 255);
+                            position: absolute;
+                            right: -65px;
+                            top: 80px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                        }
                     }
                 }
             }
