--- a/client/src/components/Cart.scss
+++ b/client/src/components/Cart.scss
@@ -46,6 +46,10 @@
         }
 
         .delete {
+            position: absolute;
+            display: flex;
+            justify-content: space-between;
+            right: 10px;
             color: red;
             font-size: 15px;
             cursor: pointer;
