--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -81,14 +81,19 @@
                 .links {
                     display: flex;
                     align-items: center;
-                    gap: 20px;
+                    //gap: 20px;
                     color: white;
+                    text-align: right;
 
                     .user {
                         position: relative;
                         left: 20px;
                         font-size: 20px;
                         font-weight: 300;
+                        .login{
+                            text-align: right;
+                            cursor: pointer;
+                        }
                     }
 
                     .cartIcon {
