--- a/client/src/components/Cart.scss
+++ b/client/src/components/Cart.scss
@@ -19,6 +19,7 @@
     .item {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         gap: 20px;
         margin-bottom: 30px;
 
@@ -46,15 +47,16 @@
         }
 
         .delete {
-            position: absolute;
-            display: flex;
-            justify-content: space-between;
-            right: 10px;
+            position: relative;
             color: red;
             font-size: 30px;
             cursor: pointer;
+            justify-self: flex-end;
         }
+
     }
+
+
 
     .total {
         display: flex;
@@ -83,5 +85,59 @@
         color: red;
         font-size: 12px;
         cursor: pointer;
+    }
+
+    .buttonWrapper {
+        display: flex;
+        justify-content: flex-end;
+        position: relative;
+
+        .Button {
+
+            position: relative;
+            top: 15px;
+
+            a:link {
+                text-decoration: none;
+            }
+
+
+            a:visited {
+                text-decoration: none;
+            }
+
+
+            a:hover {
+                text-decoration: none;
+            }
+
+
+            a:active {
+                text-decoration: none;
+            }
+
+            //transform: scale(0.7);
+            display: inline-block;
+            align-items: center;
+            outline: 0;
+            cursor: pointer;
+            border: 2px solid white;
+            border-radius: 3px;
+            color: rgba(246, 208, 59, 255);
+            background: black;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 28px;
+            padding: 4px 10px;
+            text-align: center;
+            transition-duration: .15s;
+            transition-property: all;
+            transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+        }
+
+        .Button:hover {
+            color: black;
+            background: rgba(246, 208, 59, 255);
+        }
     }
 }
