--- a/client/src/pages/Add.scss
+++ b/client/src/pages/Add.scss
@@ -1,15 +1,18 @@
-.Add {
+.Forms {
     display: flex;
     position: relative;
     color: white;
 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: black;
-        height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    height: 100vh;
+    gap: 50px;
+    text-align: center;
 
+    .Add {
         h1 {
             font-size: 30px;
             color: rgba(246, 208, 59, 255);
@@ -50,4 +53,48 @@
                 text-align: center;
             }
         }
+    }
+
+    .Delete {
+        h1 {
+            font-size: 30px;
+            color: rgba(246, 208, 59, 255);
+            margin-bottom: 20px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 30px;
+            gap: 10px;
+            background-color: #BAA242;
+            width: 200px;
+
+            input {
+                padding: 10px;
+                border: none;
+                border-bottom: 1px solid gray;
+            }
+
+            button {
+                padding: 10px;
+                border: none;
+                background-color: lavenderblush;
+                width: 95%;
+                cursor: pointer;
+                color: black;
+            }
+
+            p {
+                font-size: 12px;
+                color: red;
+            }
+
+            span {
+                font-size: 12px;
+                text-align: center;
+            }
+        }
+    }
 }
