--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -90,7 +90,8 @@
                         left: 20px;
                         font-size: 20px;
                         font-weight: 300;
-                        .login{
+
+                        .login {
                             text-align: right;
                             cursor: pointer;
                         }
@@ -106,10 +107,12 @@
                         }
 
                         span {
-                            font-size: 20px;
+                            color: black;
+                            font-size: 21px;
                             width: 25px;
                             height: 25px;
                             border-radius: 50%;
+                            line-height: 35px;
                             background-color: rgba(246, 208, 59, 255);
                             position: absolute;
                             right: -65px;
@@ -125,7 +128,7 @@
 
         footer {
             display: flex;
-            margin-top: 80px;
+            margin-top: 90px;
             padding: 20px;
             background-color: black;
             align-items: center;
